Source/WebCore/html/HTMLOListElement.h
@@ -32,8 +32,13 @@ public:
     static Ref<HTMLOListElement> create(Document&);
     static Ref<HTMLOListElement> create(const QualifiedName&, Document&);
 
-    int start() const { return m_start ? m_start.value() : (m_isReversed ? itemCount() : 1); }
-    WEBCORE_EXPORT void setStart(int);
+    // FIXME: The reason we have this start() function which does not trigger layout is because it is called
+    // from rendering code and this is unfortunately one of the few cases where the render tree is mutated
+    // while in layout.
+    int start() const { return m_start ? m_start.value() : (m_isReversed ? itemCount(ShouldLayout::No) : 1); }
+    int startForBindings() const { return m_start ? m_start.value() : (m_isReversed ? itemCount(ShouldLayout::Yes) : 1); }
+
+    WEBCORE_EXPORT void setStartForBindings(int);
 
     bool isReversed() const { return m_isReversed; }
 
@@ -44,12 +49,8 @@ private:
         
     void updateItemValues();
 
-    unsigned itemCount() const
-    {
-        if (m_shouldRecalculateItemCount)
-            const_cast<HTMLOListElement*>(this)->recalculateItemCount();
-        return m_itemCount;
-    }
+    enum class ShouldLayout { No, Yes };
+    WEBCORE_EXPORT unsigned itemCount(ShouldLayout) const;
 
     WEBCORE_EXPORT void recalculateItemCount();
 
